--- a/src/Components/CurrencyInput/CurrencyInput.module.scss
+++ b/src/Components/CurrencyInput/CurrencyInput.module.scss
@@ -13,7 +13,7 @@
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border-color: #0F6;
+  border-color: #0f6;
   background-color: transparent;
   color: white;
 }
