--- a/src/Components/PriceList/PriceList.module.scss
+++ b/src/Components/PriceList/PriceList.module.scss
@@ -1,6 +1,6 @@
 .Primary {
   user-select: none;
-  color: #0F6;
+  color: #0f6;
   font-size: 24px;
   font-family: Doto, sans-serif;
   font-optical-sizing: auto;
@@ -16,9 +16,8 @@
 
   --hover: #{adjust-hue(#19bc8b, 45deg)};
 
-  box-shadow:
-    0.3em 0.3em 0 0 #19bc8b,
-    inset 0.3em 0.3em 0 0 #19bc8b;
+  box-shadow: 0.3em 0.3em 0 0 #19bc8b,
+  inset 0.3em 0.3em 0 0 #19bc8b;
   color: #19bc8b;
   transition: 0.25s;
   background: none;
@@ -29,9 +28,8 @@
   padding: 1em 2em;
 
   &:hover {
-    box-shadow:
-      0 0 0 0 var(--hover),
-      inset 6em 3.5em 0 0 var(--hover);
+    box-shadow: 0 0 0 0 var(--hover),
+    inset 6em 3.5em 0 0 var(--hover);
     border-color: var(--hover);
     color: #fff;
   }
