--- a/src/Components/Currency/Currency.module.scss
+++ b/src/Components/Currency/Currency.module.scss
@@ -1,33 +1,61 @@
 .Primary {
-    margin: 0;
-    padding-top: 0;
-    user-select: none;
-    text-align: center;
+  margin: 0;
+  padding-top: 0;
+  user-select: none;
+  text-align: center;
 }
 
 .PrimaryText {
-    color: #0F6;
-    font-size: 80px;
-    font-family: Doto, sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    margin: 0;
+  color: #0f6;
+  font-size: 80px;
+  font-family: Doto, sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0;
 }
 
 .Swap {
-    font-family: Doto, sans-serif;
-    font-weight: 400;
-    font-size: 24px;
-    color: #0F6;
-    border-color: #0F6;
-    margin: 20px;
-    background-color: transparent;
+  font-family: Doto, sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  color: #0f6;
+  border-color: #0f6;
+  margin: 20px;
+  background-color: transparent;
 }
 
 .Results {
-    font-family: Doto, sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    color: #0F6;
+  font-family: Doto, sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  color: #0f6;
+}
+
+@media (max-width: 768px) {
+  .PrimaryText {
+    font-size: 48px;
+  }
+
+  .Swap {
+    font-size: 18px;
+  }
+
+  .Results {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 400px) {
+  .PrimaryText {
+    font-size: 40px;
+  }
+
+  .Swap {
+    font-size: 18px;
+  }
+
+  .Results {
+    font-size: 18px;
+  }
 }
