--- a/src/Components/ExchangeHistory/ExchangeHistory.module.scss
+++ b/src/Components/ExchangeHistory/ExchangeHistory.module.scss
@@ -1,28 +1,44 @@
+@use 'sass:color';
+
 .HideButton {
-    float: right;
-    font-family: Doto, sans-serif;
-    font-weight: 900;
-    font-size: 20px;
+  float: right;
+  font-family: Doto, sans-serif;
+  font-weight: 900;
+  font-size: 20px;
 
-    --hover: #{adjust-hue(#19bc8b, 45deg)};
+  --hover: #{color.adjust(#19bc8b, $hue: 45deg)};
 
+  box-shadow:
+    0.3em 0.3em 0 0 #19bc8b,
+    inset 0.3em 0.3em 0 0 #19bc8b;
+  color: #19bc8b;
+  transition: 0.25s;
+  background: none;
+  border: 2px solid;
+  line-height: 1;
+  cursor: pointer;
+  margin: 0.5em;
+  padding: 1em 2em;
+  position: relative;
+
+  &:hover {
     box-shadow:
-      0.3em 0.3em 0 0 #19bc8b,
-      inset 0.3em 0.3em 0 0 #19bc8b;
-    color: #19bc8b;
-    transition: 0.25s;
-    background: none;
-    border: 2px solid;
-    line-height: 1;
-    cursor: pointer;
-    margin: 0.5em;
-    padding: 1em 2em;
-  
-    &:hover {
-      box-shadow:
-        0 0 0 0 var(--hover),
-        inset 6em 3.5em 0 0 var(--hover);
-      border-color: var(--hover);
-      color: #fff;
-    }
+      0 0 0 0 var(--hover),
+      inset 6em 3.5em 0 0 var(--hover);
+    border-color: var(--hover);
+    color: #fff;
   }
+}
+
+@media (max-width: 768px) {
+  .HideButton {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .HideButton {
+    font-size: 14px;
+  }
+}
