--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/1.webp');
+    background-image: url('1.webp');
     background-size: auto;
     background-repeat: no-repeat;
     background-position: center;
