--- a/src/Components/Currency/Currency.module.scss
+++ b/src/Components/Currency/Currency.module.scss
@@ -6,56 +6,52 @@
 }
 
 .PrimaryText {
-  color: #0f6;
+  color: var(--color-green);
   font-size: 80px;
-  font-family: Doto, sans-serif;
+  font-family: var(--default-font);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   margin: 0;
-}
 
-.Swap {
-  font-family: Doto, sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  color: #0f6;
-  border-color: #0f6;
-  margin: 20px;
-  background-color: transparent;
-}
-
-.Results {
-  font-family: Doto, sans-serif;
-  font-weight: 700;
-  font-size: 24px;
-  color: #0f6;
-}
-
-@media (max-width: 768px) {
-  .PrimaryText {
+  @media (max-width: 768px) {
     font-size: 48px;
   }
 
-  .Swap {
+  @media (max-width: 400px) {
+    font-size: 40px;
+  }
+}
+
+.Swap {
+  font-family: var(--default-font);
+  font-weight: 400;
+  font-size: 24px;
+  color: var(--color-green);
+  border-color: var(--color-green);
+  margin: 20px;
+  background-color: transparent;
+
+  @media (max-width: 768px) {
     font-size: 18px;
   }
 
-  .Results {
+  @media (max-width: 400px) {
     font-size: 18px;
   }
 }
 
-@media (max-width: 400px) {
-  .PrimaryText {
-    font-size: 40px;
-  }
+.Results {
+  font-family: var(--default-font);
+  font-weight: 700;
+  font-size: 24px;
+  color: var(--color-green);
 
-  .Swap {
+  @media (max-width: 768px) {
     font-size: 18px;
   }
 
-  .Results {
+  @media (max-width: 400px) {
     font-size: 18px;
   }
 }
