--- a/src/Components/ExchangeHistory/ExchangeHistory.module.scss
+++ b/src/Components/ExchangeHistory/ExchangeHistory.module.scss
@@ -2,7 +2,7 @@
 
 .HideButton {
   float: right;
-  font-family: Doto, sans-serif;
+  font-family: var(--default-font);
   font-weight: 900;
   font-size: 20px;
 
@@ -28,17 +28,12 @@
     border-color: var(--hover);
     color: #fff;
   }
-}
 
-@media (max-width: 768px) {
-  .HideButton {
+  @media (max-width: 768px) {
     font-size: 15px;
   }
-}
 
-@media (max-width: 400px) {
-
-  .HideButton {
+  @media (max-width: 400px) {
     font-size: 14px;
   }
 }
