--- a/src/Components/ExchangeRatesMarque/ExchangeRatesMarquee.module.scss
+++ b/src/Components/ExchangeRatesMarque/ExchangeRatesMarquee.module.scss
@@ -1,8 +1,8 @@
 .Marquee {
   user-select: none;
-  color: #0f6;
+  color: var(--color-green);
   font-size: 80px;
-  font-family: Doto, sans-serif;
+  font-family: var(--default-font);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
