--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin largemedia {
-  @media (width <= 768px) {
-    @content;
-  }
+    @media (max-width: 768px) {
+        @content;
+    }
 }
 
 @mixin smallmedia {
-  @media (width <= 400px) {
-    @content;
-  }
+    @media (max-width: 400px) {
+        @content;
+    }
 }
